# sofia

./: .clang-format  .clang-format-check.sh  .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTORS  README.md  apply-format.sh  clangformat_all.sh
.githubfiles/: dart_experimental_nov22p1.cfg
at/: CMakeLists.txt  R3BSofAT.cxx  R3BSofAT.h  SofATLinkDef.h  SofAtLinkDef.h
geobase/: CMakeLists.txt  create_at_geo.C  create_glad_geo.C  create_mwpc0_geo.C  create_mwpc1and2_geo.C  create_mwpc3_geo.C  create_sci_geo.C  create_target_area_s455_geo.C  create_targetvacuumchamber_s455_geo.C  create_tofsofia_geo.C  create_trim_geo.C  create_twin_geo.C  rootlogon.C
geometry/: glad_s455.geo.root  media_r3b.geo  mwpc_0.geo.root  mwpc_1.geo.root  mwpc_2.geo.root  mwpc_3.geo.root  sof_at_v17a.geo.root  sof_at_v19a.geo.root  sof_califa_demo.geo.root  sof_tof_v0.geo.root  sof_tof_v19.geo.root  startra_p2pv2.geo.root  target_SofH2.geo.root  targetvacuumchamber_ams_s455.geo.root  targetvacuumchamber_s455.geo.root  twinmusic_v0.geo.root  twinmusic_v19a.geo.root
input/: detectors_cfg.h  p2p_U238_300.txt
macros/: CMakeLists.txt
mwpc/: CMakeLists.txt  R3BSofMWPC.cxx  R3BSofMWPC.h  R3BSofMWPC2.cxx  R3BSofMWPC2.h  R3BSofMwpcDigitizer.cxx  R3BSofMwpcDigitizer.h  SofMWPCLinkDef.h  SofMwpcLinkDef.h
mwpc0/: CMakeLists.txt  R3BSofMwpc0.cxx  R3BSofMwpc0.h  R3BSofMwpc0Cal2Hit.cxx  R3BSofMwpc0Cal2Hit.h  R3BSofMwpc0CalPar.cxx  R3BSofMwpc0CalPar.h  R3BSofMwpc0ContFact.cxx  R3BSofMwpc0ContFact.h  R3BSofMwpc0Mapped2Cal.cxx  R3BSofMwpc0Mapped2Cal.h  R3BSofMwpc0Mapped2CalPar.cxx  R3BSofMwpc0Mapped2CalPar.h  SofMWPCLinkDef.h
mwpc1/: CMakeLists.txt  R3BSofMwpc1.cxx  R3BSofMwpc1.h  R3BSofMwpc1Cal2Hit.cxx  R3BSofMwpc1Cal2Hit.h  R3BSofMwpc1CalPar.cxx  R3BSofMwpc1CalPar.h  R3BSofMwpc1ContFact.cxx  R3BSofMwpc1ContFact.h  R3BSofMwpc1Mapped2Cal.cxx  R3BSofMwpc1Mapped2Cal.h  R3BSofMwpc1Mapped2CalPar.cxx  R3BSofMwpc1Mapped2CalPar.h  SofMWPCLinkDef.h
mwpc2/: CMakeLists.txt  R3BSofMwpc2.cxx  R3BSofMwpc2.h  R3BSofMwpc2Cal2Hit.cxx  R3BSofMwpc2Cal2Hit.h  R3BSofMwpc2CalPar.cxx  R3BSofMwpc2CalPar.h  R3BSofMwpc2ContFact.cxx  R3BSofMwpc2ContFact.h  R3BSofMwpc2Mapped2Cal.cxx  R3BSofMwpc2Mapped2Cal.h  R3BSofMwpc2Mapped2CalPar.cxx  R3BSofMwpc2Mapped2CalPar.h  SofMWPCLinkDef.h
mwpc3/: CMakeLists.txt  R3BSofMwpc3.cxx  R3BSofMwpc3.h  R3BSofMwpc3Cal2Hit.cxx  R3BSofMwpc3Cal2Hit.h  R3BSofMwpc3CalPar.cxx  R3BSofMwpc3CalPar.h  R3BSofMwpc3ContFact.cxx  R3BSofMwpc3ContFact.h  R3BSofMwpc3Mapped2Cal.cxx  R3BSofMwpc3Mapped2Cal.h  R3BSofMwpc3Mapped2CalPar.cxx  R3BSofMwpc3Mapped2CalPar.h  SofMWPCLinkDef.h
sci/: CMakeLists.txt  R3BSofSCI.cxx  R3BSofSCI.h  R3BSofSci.cxx  R3BSofSci.h  R3BSofSciCalPosPar.cxx  R3BSofSciCalPosPar.h  R3BSofSciCalTofPar.cxx  R3BSofSciCalTofPar.h  R3BSofSciContFact.cxx  R3BSofSciContFact.h  R3BSofSciMapped2Tcal.cxx  R3BSofSciMapped2Tcal.h  R3BSofSciMapped2TcalPar.cxx  R3BSofSciMapped2TcalPar.h  R3BSofSciRawPosPar.cxx  R3BSofSciRawPosPar.h  R3BSofSciRawTofPar.cxx  R3BSofSciRawTofPar.h  R3BSofSciSingleTCal2Hit.cxx  R3BSofSciSingleTCal2Hit.h  R3BSofSciSingleTcal2Cal.cxx  R3BSofSciSingleTcal2Cal.h  R3BSofSciSingleTcal2CalPosCaveCPar.cxx  R3BSofSciSingleTcal2CalPosCaveCPar.h  R3BSofSciSingleTcal2Hit.cxx  R3BSofSciSingleTcal2Hit.h  R3BSofSciTcal2RawPosPar.cxx  R3BSofSciTcal2RawPosPar.h  R3BSofSciTcal2RawTofPar.cxx  R3BSofSciTcal2RawTofPar.h  SofSCILinkDef.h  (+3 more)
tofwall/test/: CMakeLists.txt  testSofTofWContainerPar.cxx  testSofTofWSimulation.C
(+567 files in other folders)
